# ui-detector

./: .gitignore  README.md  pyproject.toml
doc/: search.js  src.html
doc/src/: generate.html  optimize.html  train.html  tune.html
docs/: search.js  src.html
schema/: design_file.schema.json
src/: __init__.py  generate.py  generate_pipeline.py  optimize.py  train.py  train_pipeline.py  tune.py
