[tool.poetry]
name = "ui-detector"
version = "0.1.0"
description = "UI Detector model for LVGL"
authors = ["HackXIt <hackxit@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
jupyterlab = "^4.1.5"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
pyyaml = "^6.0.1"
ipykernel = "^6.29.4"
ultralytics = "^8.1.47"
optuna = "^3.6.1"
clearml = "^1.15.1"
openai = "^1.23.6"
plotly = "^5.22.0"

[tool.poetry.group.dev.dependencies]
clearml-agent = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
